Ask Players every noon on monday if we're playing this week?

--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'org.dnd.discord.bot.Main'
     }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
